--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" title="Contactenos">Contactenos</a>
+                        <a class="nav-link" href="#sidebarContacto" data-bs-toggle="offcanvas" role="button" title="Contactenos" aria-controls="sidebar">Contáctenos</a>
                     </li>
                 </ul>
                 <div class="d-flex usuario">
@@ -124,6 +124,58 @@
             </div>
         </div>
         
+    </div>
+    <!--offCanvas contacto-->
+    <div class="offcanvas offcanvas-end" tabindex="-1" id="sidebarContacto"
+    aria-labelledby="sidebar-label">
+        <div class="offcanvas-header">
+            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            <!-- -----close button (don´t works i don´t know why)--------
+            <button type="button" class="btn-close" data-bs-dimiss="offcanvas"aria-label="Close"></button>-->
+        </div>
+        <div class="offcanvas-body">
+            <div id="login">
+                <form action="index.html" method="post">
+                    <h4 class="text-center mt-3">Contáctenos</h4>
+                    <br>
+                    <div class="accordion" id="accordionPanelsStayOpenExample">
+                        <div class="accordion-item">
+                          <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                              General
+                            </button>
+                          </h2>
+                          <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+                            <div class="accordion-body">
+                              <strong>MiCasaYa</strong>
+                              <br> 
+                              <p>Contacto@micasaya.com</p>
+                              <p><strong>Dirección:</strong>  Ac. 100 ##No 16-56, Bogotá</p>
+                              <p><strong>Teléfono:</strong> (1) 1501000</p>
+                              <p><strong>Fax:</strong> +420313414515</p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="accordion-item">
+                          <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+                              Desarrolladores
+                            </button>
+                          </h2>
+                          <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+                            <div class="accordion-body">
+                              <p><strong>Diego Fernando Bello López</strong> <br> Dbello@unal.edu.co</p>
+                              <p><strong>Oscar Javier Martinez Martinez</strong> <br> Ojmartinezma@unal.edu.co</p>
+                              <p><strong>Santiago Alvarez Ricardo</strong> <br> Salvarezri@unal.edu.co</p>
+                              <p><strong>José Ignacio Suárez Montiel</strong> <br> Josuarezm@unal.edu.co</p>
+                              <p><strong>Diego Efraín Mojica Mendez</strong> <br> Dmojicam@unal.edu.co</p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                </form>
+            </div>
+        </div>
     </div>
 
 
