boton de limpiar y realizar filtros, métodos que retornan un objeto en JSON

--- a/filters.html
+++ b/filters.html
@@ -112,13 +112,13 @@
                             <div class="input-group">
                                 <span class="input-group-text bg-secondary text-white col-sm-5"
                                     id="FiltersminAreaText">Área mínima</span>
-                                <input type="number" id="FiltersminAreaInput" aria-label="MinValue"
+                                <input type="number" id="FiltersminAreaInput" aria-label="MinArea"
                                     class="form-control col-sm-7">
                             </div>
                             <div class="input-group">
                                 <span class="input-group-text bg-secondary text-white col-sm-5"
                                     id="FiltersmaxAreaText">Área máxima</span>
-                                <input type="number" id="FiltersmaxAreaInput" aria-label="MaxValue"
+                                <input type="number" id="FiltersmaxAreaInput" aria-label="MaxArea"
                                     class="form-control col-sm-7">
                             </div>
                             <p>
@@ -238,9 +238,9 @@
             </p>
             <div class="container-fluid">
                 <div class="row">
-                    <button type="button" class="btn btn-secondary col-5">Limpiar filtros</button> 
+                    <button type="button" id="btnCleanFilters" class="btn btn-secondary col-5">Limpiar filtros</button> 
                     <div class="col-2"></div> 
-                    <button type="button" class="btn btn-primary col-5">Filtrar</button>
+                    <button type="button" id="btnInitFilters" class="btn btn-primary col-5">Filtrar</button>
                 </div>
             </div>
         </div>
