se añadieron objetos para trabajar en la app y metodos con TODO

--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" title="Contactenos">Contactenos</a>
+                        <a class="nav-link" href="#" id="btn-test-1" title="Contactenos">Contactenos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" id="btn-test-2" title="Contactenos">Contactenos2</a>
                     </li>
                 </ul>
                 <div class="d-flex usuario">
@@ -391,6 +394,7 @@
     <script src="https://unpkg.com/@googlemaps/markerclusterer/dist/index.min.js"></script>
     <!------------------------------------------------->
     <script src="js/app/acciones.js"></script>
+    <script src="js/app/filters.js" ></script>
     <script src="js/app/Property.js"></script>
     <script src="js/app/AppMarker.js"></script>
     <script src="js/app/MapApp.js"></script>
