--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="Vivienda, Compraventa">
+    <meta name="csrf-token" content="{{ csrf_token() }}">
     <title>Inicio</title>
     <link rel="icon" type="image/png" href="imagenes/icono.png" />
     <link href="estilos.css" rel="stylesheet" type="text/css" />
@@ -35,7 +36,8 @@
                         <a class="nav-link" href="#" id="btn-test-1" title="Contactenos">Contactenos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" id="btn-test-2" title="Contactenos">Contactenos2</a>
+                        <a class="nav-link" href="#" id="btn-filters" title="Contactenos" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions"
+                        aria-controls="offcanvasWithBothOptions">Filtros</a>
                     </li>
                 </ul>
                 <div class="d-flex usuario">
@@ -387,6 +389,234 @@
 
             
             
+        </div>
+    </div>
+    <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions"
+        aria-labelledby="offcanvasWithBothOptionsLabel">
+        <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">FILTROS</h5>
+            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+            <p>Seleccione una opción de filtro y el valor que desea aplicarle. Repita este proceso hasta agregar los
+                filtros deseados y presione el botón de filtrar</p>
+
+            <div class="accordion accordion-flush" id="accordionFilters">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingOne">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseType" aria-expanded="false"
+                            aria-controls="flush-collapseType">
+                            Tipo
+                        </button>
+                    </h2>
+                    <div id="flush-collapseType" class="accordion-collapse collapse" aria-labelledby="flush-headingType"
+                        data-bs-parent="#accordionFilters">
+                        <div class="accordion-body">
+                            <div id="btnGroupType" class="btn-group" role="group"
+                                aria-label="Basic radio toggle button group">
+                                <input type="radio" class="btn-check" name="btnradioType" id="btnradioTypeCasa"
+                                    autocomplete="off">
+                                <label class="btn btn-outline-secondary" for="btnradioTypeCasa">Casa</label>
+
+                                <input type="radio" class="btn-check" name="btnradioType" id="btnradioTypeApartamento"
+                                    autocomplete="off">
+                                <label class="btn btn-outline-secondary" for="btnradioTypeApartamento">Apartamento</label>
+
+                                <input type="radio" class="btn-check" name="btnradioType" id="btnradioTypeOficina"
+                                    autocomplete="off">
+                                <label class="btn btn-outline-secondary" for="btnradioTypeOficina">Oficina</label>
+
+                                <input type="radio" class="btn-check" name="btnradioType" id="btnradioTypeBodega"
+                                    autocomplete="off">
+                                <label class="btn btn-outline-secondary" for="btnradioTypeBodega">Bodega</label>
+                            </div>
+                            <p>
+
+                            </p>
+                            <input type="radio" class="btn-check" name="btnradioType" id="btnradioTypeAny"
+                                autocomplete="off">
+                            <label class="btn btn-outline-secondary" for="btnradioTypeAny">Todos</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingFilters">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapsePrice" aria-expanded="false"
+                            aria-controls="flush-collapsePrice">
+                            Precio
+                        </button>
+                    </h2>
+                    <div id="flush-collapsePrice" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
+                        data-bs-parent="#accordionFilters">
+                        <div class="accordion-body">
+                            <div class="input-group">
+                                <span class="input-group-text bg-secondary text-white col-sm-5"
+                                    id="FiltersminValueText">Valor mínimo</span>
+                                <input type="number" id="FiltersminValueInput" aria-label="MinValue"
+                                    class="form-control col-sm-7">
+                            </div>
+                            <div class="input-group">
+                                <span class="input-group-text bg-secondary text-white col-sm-5"
+                                    id="FiltersmaxValueText">Valor máximo</span>
+                                <input type="number" id="FiltersmaxValueInput" aria-label="MaxValue"
+                                    class="form-control col-sm-7">
+                            </div>
+                            <p>
+
+                            </p>
+                            <input type="checkbox" class="btn-check" name="btnradioPrice" id="btnradioPriceAny"
+                                autocomplete="off">
+                            <label class="btn btn-outline-secondary" for="btnradioPriceAny">Todos</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingArea">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseArea" aria-expanded="false"
+                            aria-controls="flush-collapseArea">
+                            Área
+                        </button>
+                    </h2>
+                    <div id="flush-collapseArea" class="accordion-collapse collapse"
+                        aria-labelledby="flush-headingThree" data-bs-parent="#accordionFilters">
+                        <div class="accordion-body">
+                            <div class="input-group">
+                                <span class="input-group-text bg-secondary text-white col-sm-5"
+                                    id="FiltersminAreaText">Área mínima</span>
+                                <input type="number" id="FiltersminAreaInput" aria-label="MinArea"
+                                    class="form-control col-sm-7">
+                            </div>
+                            <div class="input-group">
+                                <span class="input-group-text bg-secondary text-white col-sm-5"
+                                    id="FiltersmaxAreaText">Área máxima</span>
+                                <input type="number" id="FiltersmaxAreaInput" aria-label="MaxArea"
+                                    class="form-control col-sm-7">
+                            </div>
+                            <p>
+
+                            </p>
+                            <input type="checkbox" class="btn-check" name="btnradioArea" id="btnradioAreaAny"
+                                autocomplete="off">
+                            <label class="btn btn-outline-secondary" for="btnradioAreaAny">Todos</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseEst" aria-expanded="false" aria-controls="flush-collapseEst">
+                            Estrato
+                        </button>
+                    </h2>
+                    <div id="flush-collapseEst" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
+                        data-bs-parent="#accordionFilters">
+                        <div class="accordion-body">
+                            <div id="btnGroupType" class="btn-group" role="group"
+                                aria-label="Basic radio toggle button group">
+                                <input type="radio" class="btn-check" name="btnradioEst" id="btnradioEst1"
+                                    autocomplete="off">
+                                <label class="btn btn-outline-secondary" for="btnradioEst1">1</label>
+
+                                <input type="radio" class="btn-check" name="btnradioEst" id="btnradioEst2"
+                                    autocomplete="off">
+                                <label class="btn btn-outline-secondary" for="btnradioEst2">2</label>
+
+                                <input type="radio" class="btn-check" name="btnradioEst" id="btnradioEst3"
+                                    autocomplete="off">
+                                <label class="btn btn-outline-secondary" for="btnradioEst3">3</label>
+
+                                <input type="radio" class="btn-check" name="btnradioEst" id="btnradioEst4"
+                                    autocomplete="off">
+                                <label class="btn btn-outline-secondary" for="btnradioEst4">4</label>
+
+                                <input type="radio" class="btn-check" name="btnradioEst" id="btnradioEst5"
+                                    autocomplete="off">
+                                <label class="btn btn-outline-secondary" for="btnradioEst5">5</label>
+
+                                <input type="radio" class="btn-check" name="btnradioEst" id="btnradioEst6"
+                                    autocomplete="off">
+                                <label class="btn btn-outline-secondary" for="btnradioEst6">6</label>
+                            </div>
+                            <p>
+
+                            </p>
+                            <input type="radio" class="btn-check" name="btnradioEst" id="btnradioEstAny"
+                                autocomplete="off">
+                            <label class="btn btn-outline-secondary" for="btnradioEstAny">Todos</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseFloors" aria-expanded="false"
+                            aria-controls="flush-collapseFloors">
+                            Número de plantas
+                        </button>
+                    </h2>
+                    <div id="flush-collapseFloors" class="accordion-collapse collapse"
+                        aria-labelledby="flush-headingThree" data-bs-parent="#accordionFilters">
+                        <div class="accordion-body">
+                            <div class="input-group mb-3">
+                                <span class="input-group-text bg-secondary text-white" >
+                                    Número de plantas:</span>
+                                <input type="number" id="FiltersNumberFloors" class="form-control" aria-label="Plantas"
+                                    aria-describedby="FiltersNumberFloors">
+                            </div>
+                            <p>
+
+                            </p>
+                            <input type="checkbox" class="btn-check" name="btnradioFloors" id="btnradioFloorsAny"
+                                autocomplete="off">
+                            <label class="btn btn-outline-secondary" for="btnradioFloorsAny">Todos</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseFeatures" aria-expanded="false"
+                            aria-controls="flush-collapseFeatures">
+                            Características
+                        </button>
+                    </h2>
+                    <div id="flush-collapseFeatures" class="accordion-collapse collapse"
+                        aria-labelledby="flush-headingThree" data-bs-parent="#accordionFilters">
+                        <div class="accordion-body">
+                            <div class="form-floating">
+                                <select class="form-select border-secondary" id="floatingSelectFeatures"
+                                    aria-label="Floating label select example">
+                                    <option selected value="0">Todas</option>
+                                    <option value="1">Vigilancia</option>
+                                    <option value="2">Parqueadero</option>
+                                    <option value="3">Amueblado</option>
+                                </select>
+                                <label class="" for="floatingSelect">Seleccióne la característica</label>
+                            </div>
+                            <p>
+
+                            </p>
+                            <input type="checkbox" class="btn-check" name="btnradioFeatures" id="btnradioFeaturesAny"
+                                    autocomplete="off">
+                            <label class="btn btn-outline-secondary" for="btnradioFeaturesAny">Todos</label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <p>
+
+
+            </p>
+            <div class="container-fluid">
+                <div class="row">
+                    <button type="button" id="btnCleanFilters" class="btn btn-secondary col-5">Limpiar filtros</button> 
+                    <div class="col-2"></div> 
+                    <button type="button" id="btnInitFilters" class="btn btn-primary col-5">Filtrar</button>
+                </div>
+            </div>
         </div>
     </div>
 
